--- a/views/index.html
+++ b/views/index.html
@@ -8,13 +8,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../csslib/bootstrap.css" >
     
+    <link rel="stylesheet" href="../css/comon.css" >
     <link rel="stylesheet" href="../css/index.css" >
 
 
     <!-- JBootstrap Js Dependencies-->
-    <script src="jslib/jquery-3.3.1.slim.js" ></script>
-    <script src="jslib/popper.js" ></script>
-    <script src="jslib/bootstrap.js" ></script>
+    <script src="../jslib/jquery-3.3.1.slim.js" ></script>
+    <script src="../jslib/popper.js" ></script>
+    <script src="../jslib/bootstrap.js" ></script>
 
      <!-- JBootstrap Js Dependencies-->
     <script src="../jslib/angular.js"></script>
@@ -26,7 +27,7 @@
 
   </head>
   <body ng-app="myApp">
-  <div ng-controller="myCtrl" class="myContainer">
+  <div ng-controller="myCtrl" class="container-flex">
    
 	{{helloWorld}}
     
